# platform.upstream.libSM

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  configure.ac  libSM-1.2.1.tar.bz2.delta  libSM-1.2.1.tar.bz2.id  sm.pc.in
doc/: .gitignore  Makefile.am  SMlib.ms  SMlib.xml  xsmp.ms  xsmp.xml
include/X11/SM/: SMlib.h
packaging/: baselibs.conf  libSM.changes  libSM.spec
src/: .cvsignore  Makefile.am  SMlibint.h  globals.h  sm_client.c  sm_error.c  sm_genid.c  sm_manager.c  sm_misc.c  sm_process.c
